# restalker

./: .gitignore  .uvignore  CHANGELOG.md  LICENSE  MIGRATION_TO_UV.md  README.md  SPACY_UPDATE.md  TODO.md  __init__.py  link_extractors.py  metadata.py  pyproject.toml  regex_gpg.py  requeriments.txt  requirements-gpu-cuda.txt  requirements-gpu-rocm.txt  requirements.txt  setup.py  setup_spacy.py  stalker.py  test.py  test.txt  test_bin_ccn.py  test_phone_regex.py  test_textan.py  unit_test.py  unit_test_helpers.py
.github/workflows/: codeql.yml
.sisyphus/evidence/: task-2-completion.txt  task-3-completion.txt  task-4-completion.txt  task-5-completion.txt  task-6-completion.txt
.sisyphus/notepads/darknet-text-extraction/: learnings.md
doc/: deploy.sh
restalker/: __init__.py  link_extractors.py  metadata.py  restalker.py  spacy_singleton.py  textan.py
scripts/: detect_gpu.py
stalker/: __init__.py  link_extractors.py  old_requeriments.txt  stalker.py  textan.py
testing/: locations.json  locations.txt  phones.json  phones.txt  s.py  test.py  test_gliner.py  tools.py
testing/bound_testing/: test_all_config.py  test_chunk_boundary.py  test_context_validation.py  test_debug_fail.py  test_example_original.py  test_final_hash.py  test_hash_extended.py  test_hash_phone.py
tests/: conftest.py  test_aws_resources.py  test_bin_ccn.py  test_hash_phone_detection.py  test_restalker.py
tests/demos/: demo_bitcoin_data.py  demo_gliner.py  demo_phones.py  demo_textan.py
tests/fixtures/: dummy_text.txt  phones.txt
