[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restalker"
version = "2.2.1"
description = "Text analyzer package"
authors = [{name = "Javier Junquera-Sánchez", email = "javier@junquera.io"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["text-analysis", "nlp", "cryptocurrency", "blockchain", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "base58>=1.0.0",
    "web3>=6.0.0",
    "monero>=0.0.3",
    "bip-utils>=0.7.0",
    "bech32ref",
    "bs4>=0.0.2",
    "lxml>=5.0.0",
    "phonenumbers>=8.13.0",
    "python-magic>=0.4.27",
    "gliner2>=0.2.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://gitlab.com/junquera/stalker"
Repository = "https://gitlab.com/junquera/stalker.git"
Documentation = "https://gitlab.com/junquera/stalker#readme"

[project.scripts]
restalker = "restalker.restalker:main"

[project.optional-dependencies]
# NVIDIA GPU support (CUDA 12.1)
# Install with: uv pip install -e ".[gpu]"
# Disk space: ~3.2GB | Performance: 5-10x faster
gpu = ["torch>=2.0.0"]

# AMD GPU support (ROCm 6.0+)
# Install with: uv pip install -e ".[amd-gpu]"
# Disk space: ~3.5GB | Performance: 3-7x faster
amd-gpu = ["torch>=2.0.0"]

# Development dependencies
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.15.0",
]

[tool.uv]
# uv will use torch from PyTorch CPU wheels by default
# Override with --index-url for GPU variants

[tool.hatch.build.targets.wheel]
packages = ["restalker"]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# Output verbosity and coverage
addopts = [
    "-v",                           # Verbose: show each test name
    "-ra",                          # Show summary of all outcomes (except passed)
    "--tb=short",                   # Shorter tracebacks for failures
    "--strict-markers",             # Fail on unknown markers
    "--durations=10",               # Show 10 slowest tests
    
    # Coverage options
    "--cov=restalker",              # Measure coverage for restalker package only
    "--cov-branch",                 # Enable branch coverage (if/else paths)
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=term:skip-covered", # Skip 100% covered files in summary
    
    # Performance
    "--maxfail=5",                  # Stop after 5 failures
]

# Test collection patterns
norecursedirs = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
    "htmlcov",
    "doc",
    "scripts",
    "tests/demos",
    "tests/fixtures",
]

[tool.coverage.run]
source = ["restalker"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/doc/*",
    "*/scripts/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

# Exclude lines from coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
# Allow imports after code in demo files
"tests/demos/demo_gliner.py" = ["E402"]
# Allow imports after GLiNER2 initialization and long test data strings
"tests/test_restalker.py" = ["E402", "E501"]
